--- a/SPOJ.WPF/Forms/MainWindow.xaml
+++ b/SPOJ.WPF/Forms/MainWindow.xaml
@@ -11,10 +11,8 @@
 			<TabItem Header="Basics">
 				<DataGrid>
 					<DataGrid.Columns>
-						<DataGridTextColumn Header="Nazwa zadania">
-						</DataGridTextColumn>
-						<DataGridTextColumn Header="Opis">
-						</DataGridTextColumn>
+						<DataGridTextColumn Header="Nazwa zadania"/>
+						<DataGridTextColumn Header="Opis"/>
 					</DataGrid.Columns>
 				</DataGrid>
 			</TabItem>
