--- a/SPOJ.WPF/Views/MainWindow.xaml
+++ b/SPOJ.WPF/Views/MainWindow.xaml
@@ -1,20 +1,30 @@
-﻿<Window x:Class="SPOJ.WPF.MainWindow"
+﻿<Window x:Class="SPOJ.WPF.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:c="clr-namespace:SPOJ.WPF.Views.Controls"
+		xmlns:vm="clr-namespace:SPOJ.WPF.ViewModels"
         xmlns:local="clr-namespace:SPOJ.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
-    <Grid>
+
+	<Window.DataContext>
+		<vm:MainWindowViewModel/>
+	</Window.DataContext>
+	
+	<Grid>
 		<TabControl>
 			<TabItem Header="Basics">
-				<DataGrid>
+				<DataGrid x:Name="BasicsDataGrid" MouseDoubleClick="DataGrid_MouseDoubleClick">
 					<DataGrid.Columns>
 						<DataGridTextColumn Header="Nazwa zadania"/>
-						<DataGridTextColumn Header="Opis"/>
+						<!--<DataGridTextColumn Header="Opis"/>-->
 					</DataGrid.Columns>
 				</DataGrid>
+
+				<!--<c:DataGridControl DataContext="{Binding Basics}"/>-->
+
 			</TabItem>
 			<TabItem Header="Tutorial"></TabItem>
 			<TabItem Header="Classical"></TabItem>
